[gd_scene load_steps=7 format=3 uid="uid://b5fch7iwyn811"]

[ext_resource type="PackedScene" uid="uid://ccvky0721knit" path="res://Assets/3D Models/Environment/Trees/Palm/Models/PalmTree1.blend" id="1_0h3y5"]
[ext_resource type="Script" uid="uid://cdyp7lqng6qo0" path="res://Assets/3D Models/Environment/Trees/Scripts/PalmTree_Animation_Hitbox_SCRIPT.gd" id="2_6lwfh"]
[ext_resource type="PackedScene" uid="uid://6exo537gjcsd" path="res://Scenes and Scripts/Scenes/Environment/Pickables/Coconut/Coconut.tscn" id="3_6lwfh"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_dgoxg"]
points = PackedVector3Array(3.08107, -9.10592, -0.743522, -0.999521, -1.79614, -0.233432, 1.55045, -9.10592, 0.446534, 0.701258, 0.583639, 0.616641, 0.361342, 0.243823, -0.913164, 1.38069, -9.27636, -1.25361, -0.658806, 0.243823, 0.786749, 2.91091, -9.27636, 0.276659, -0.658806, 0.413198, -0.743522, 2.40084, -8.76717, -1.42372, 0.191184, -0.266434, 0.956857, 0.701258, 0.583639, -0.573181, -0.00147621, -5.11136, 0.362357, 1.38069, -9.78768, -0.233432, 0.701258, -5.87606, -1.25361, -0.828964, -1.79614, 0.616641, -0.828964, -1.79614, -0.743522, 3.08107, -8.76717, -0.233432, -0.135111, -5.10365, -0.527259, 2.74075, -8.59673, -1.25361, 1.55045, -7.74559, 0.616641, 0.871416, 0.413198, -0.233432, -0.148732, -0.946067, 0.956857, 2.34575, -9.57418, -1.04907, -0.999521, 0.0733819, 0.106551, 1.04077, -9.10592, -0.233432, 0.0210265, -2.47684, -1.0835, 0.871416, -7.74559, 0.446534, 3.08107, -8.76717, -0.743522, -0.265585, 0.711198, 0.0932221, 2.5706, -8.76717, 0.446534, 0.701258, 0.0733819, 0.786749)

[sub_resource type="Animation" id="Animation_0h3y5"]
resource_name = "wind"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Leaf_002:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.03333, 4.93333, 11.6, 16.3, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.109061, -0.146614, 0.041923), Vector3(0.141926, -0.153244, -0.00461512), Vector3(0.153424, -0.14173, 0.0735953), Vector3(0.109061, -0.146614, 0.041923), Vector3(0.141926, -0.153244, -0.00461512), Vector3(0.109061, -0.146614, 0.041923)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Leaf_003:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.9468, 7.96667, 12.1411, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.000342485, -1.2815, 0.176137), Vector3(-0.0185757, -1.28208, 0.239745), Vector3(0.0351139, -1.28195, 0.255693), Vector3(-0.00545614, -1.28464, 0.185402), Vector3(0.000342485, -1.2815, 0.176137)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Leaf:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 6.39006, 11.8028, 16.539, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.369919, -1.30857, -0.178336), Vector3(-0.290428, -1.31578, -0.156113), Vector3(-0.328362, -1.34818, -0.166562), Vector3(-0.253133, -1.26978, -0.141886), Vector3(-0.369919, -1.30857, -0.178336)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Leaf_005:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 4.02198, 11.0886, 16.8021, 20),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.58008, 0.785043, 0.225043), Vector3(-0.58008, 0.785043, 0.225043), Vector3(-0.526493, 0.817122, 0.164031), Vector3(-0.526493, 0.788115, 0.164031), Vector3(-0.414427, 0.841872, 0.0457357), Vector3(-0.58008, 0.785043, 0.225043)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgoxg"]
_data = {
&"wind": SubResource("Animation_0h3y5")
}

[node name="PalmTree1" instance=ExtResource("1_0h3y5")]
script = ExtResource("2_6lwfh")

[node name="Leaf_002" parent="." index="1"]
transform = Transform3D(1.32545, -0.0880818, -0.709603, 0.0559061, 1.52545, -0.531855, 0.201922, 0.155833, 4.80521, -0.904471, 13.4362, 0.0300764)

[node name="Leaf_003" parent="." index="2"]
transform = Transform3D(1.13478, -0.16884, -1.28172, 0.708121, 3.30395, -0.000458001, 3.81336, -0.563282, 0.381498, -0.785085, 13.7842, -0.0565622)

[node name="Leaf" parent="." index="3"]
transform = Transform3D(0.417326, 0.44278, -3.35461, -0.357301, 1.04274, 1.34686, 2.08929, 0.0898815, 0.900399, -0.799375, 13.4597, 0.00569895)

[node name="Leaf_005" parent="." index="6"]
transform = Transform3D(1.30282, -0.608546, 2.20252, 0.403213, 0.926548, 2.04183, -1.67542, -0.250223, 2.20409, -0.921216, 13.1563, -0.0578141)

[node name="StaticBody3D" type="StaticBody3D" parent="." index="11"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
transform = Transform3D(0.745478, 0.126165, -0.0350435, -0.065143, 1.42109, 0.02406, 0.0370925, -0.0398766, 0.746553, -0.848068, 12.9827, -0.0276019)
shape = SubResource("ConvexPolygonShape3D_dgoxg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="12"]
libraries = {
&"": SubResource("AnimationLibrary_dgoxg")
}

[node name="CoconutSpawn1" type="Node3D" parent="." index="13"]
transform = Transform3D(-0.0986449, -0.477728, 0.872952, 0.0253002, 0.875743, 0.482115, -0.994801, 0.069644, -0.0743009, 0, 12.5599, 0)

[node name="Coconut" parent="CoconutSpawn1" index="0" instance=ExtResource("3_6lwfh")]

[node name="CoconutSpawn2" type="Node3D" parent="." index="14"]
transform = Transform3D(-0.709724, -0.323903, 0.625602, 0.0253001, 0.875743, 0.482115, -0.704025, 0.357996, -0.613341, -0.552051, 12.5599, -0.757712)

[node name="Coconut" parent="CoconutSpawn2" index="0" instance=ExtResource("3_6lwfh")]

[node name="CoconutSpawn3" type="Node3D" parent="." index="15"]
transform = Transform3D(-0.664483, 0.348887, -0.660864, 0.361835, 0.923963, 0.123968, 0.653864, -0.156749, -0.740197, -1.81473, 12.5599, 0.563688)

[node name="Coconut" parent="CoconutSpawn3" index="0" instance=ExtResource("3_6lwfh")]
